--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,26 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  transition: opacity, z-index, color ease-in-out .3s;
+  font-family: 'new-hero', sans-serif;
+  font-weight: 400;
+  color: #fff;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  box-sizing: border-box;
+  display: inline-block;
+  width: 100vw;
+  max-width: 100vw;
+  clear: both;
+  overflow-x: hidden
+}
+
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+  scroll-behavior: smooth
+}
+
+nav a {
+  text-decoration: none
+}
+
+h1, h1 *, h2, h3, h4, h5, h6, nav * {
+  font-family: 'Chennai', serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@media screen and (min-width: 768px) {
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  ::-webkit-scrollbar-thumb {
+    border-radius: 2rem;
+    background-color: #19191e4d;
+    -webkit-box-shadow: 0 0 1px hsl(0deg 0% 100% / 50%);
+  }
 }
