--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -39,7 +39,7 @@ h4,
 h5,
 h6,
 nav * {
-	font-family: 'Chennai', serif;
+	font-family: 'Chennai', sans-serif;
 	font-weight: 400;
 	font-style: normal;
 }
