--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -30,18 +30,7 @@ nav a {
 	text-decoration: none;
 }
 
-h1,
-h1 *,
-h2,
-h3,
-h4,
-h5,
-h6,
-nav * {
-	font-family: 'Chennai', sans-serif;
-	font-weight: 400;
-	font-style: normal;
-}
+
 
 @media screen and (min-width: 768px) {
 	::-webkit-scrollbar {
@@ -55,5 +44,37 @@ nav * {
 		border-radius: 2rem;
 		background-color: #19191e4d;
 		-webkit-box-shadow: 0 0 1px hsl(0deg 0% 100% / 50%);
+	}
+}
+
+/* custom property group for tailwind */
+@layer base {
+	h1 {
+		@apply text-2xl font-semibold;
+		text-shadow: 0 1px 2px rgba(0, 0, 0, 0.10), 0 1px 1px rgba(0, 0, 0, 0.06);
+	}
+	h2 {
+		@apply text-xl font-light;
+		text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.10), 1px 1px 3px rgba(0, 0, 0, 0.06);
+	}
+	h3 {
+		@apply text-lg;
+	}
+	h4 {
+		@apply text-base;
+	}
+	* {
+		@apply text-slate-950;
+	}
+
+	h1,
+	h1 *,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6,
+	nav * {
+		font-family: 'Chennai', sans-serif;
 	}
 }
