🔧 corriger(layout.js) : ajouter une classe de fond à l'élément body 🔧 corriger(layout.js) : ajouter une classe de hauteur à l'élément main 🔧 corriger(layout.js) : ajouter une classe de rembourrage supérieur à l'élément div 🔧 corriger(page.js) : ajouter une classe de hauteur et de rembourrage à l'élément div 🔧 corriger(globals.css) : corriger la propriété font-family ✨ fonctionnalité(utils.js) : ajouter une fonction pour convertir une chaîne en kebab-case

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -7,8 +7,8 @@
 	list-style: none;
 	text-decoration: none;
 	transition: opacity, z-index, color ease-in-out 0.3s;
-	font-family: 'new-hero', sans-serif;
-	font-weight: 400;
+	font-family: new-hero, sans-serif;
+	font-style: normal;
 }
 
 body {
