Refactor code to remove unused variable and add new CSS class
- Remove the unused variable `dataLastChild`
- Add a new CSS class `.container-dishes` in `globals.css`

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -96,4 +96,8 @@ nav a {
     .container-menus{
         @apply flex h-full min-h-[calc(100vh-25rem)] w-full flex-col items-center justify-center gap-8;
     }
+
+    .container-dishes{
+        @apply flex h-full min-h-[calc(100vh-25rem)] w-full flex-col gap-8;
+    }
 }
