🚀 Refactor page.js and globals.css
- Removed the unused searchParams parameter from the Page component in page.js
- Renamed container-menus to container-menu and added flex justify-center to it in globals.css
- Added container-sub-menus class with flex properties in globals.css
- Added max-w-sm property to container-dishes class in globals.css

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -82,7 +82,7 @@ nav a {
     }
 }
 
-@layer components{
+@layer components {
     /* Custom Button */
     .btn-primary {
         @apply flex min-h-[50px] w-[235px] items-center gap-8 rounded-lg border-[1.5px] border-blue-950 bg-blue-950 px-7 py-3.5 text-sm text-white shadow-lg sm:text-base;
@@ -93,11 +93,19 @@ nav a {
         @apply flex min-h-[50px] w-[235px] items-center gap-8 rounded-lg border-[1.5px] border-blue-950 bg-slate-50 px-7 py-3.5 text-sm text-blue-950 shadow-lg sm:text-base;
     }
 
-    .container-menus{
+    .container-menu {
+        @apply flex justify-center w-full
+    }
+    
+    .container-menus {
         @apply flex h-full min-h-[calc(100vh-25rem)] w-full flex-col items-center justify-center gap-8;
     }
 
-    .container-dishes{
+    .container-sub-menus {
+        @apply flex h-full min-h-[calc(100vh-25rem)] w-full flex-col items-center justify-center gap-8 max-w-sm;
+    }
+
+    .container-dishes {
         @apply flex h-full min-h-[calc(100vh-25rem)] w-full flex-col gap-8;
     }
 }
