🔧 Update global CSS and navigation components
- Added a new CSS class `.btn-nav` to `globals.css` for styling navigation buttons.
- Modified the `BackToPrevious` component in `BackToPrevious.js` to accept children as an alternative to content.
- Updated the navigation component in `nav.js` to include a back button with an arrow icon.

These changes improve the styling and functionality of the navigation elements.

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -108,4 +108,8 @@ nav a {
     .container-dishes {
         @apply flex h-full w-full flex-col gap-8;
     }
+
+    .btn-nav{
+        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full border border-blue-950 bg-white;
+    }
 }
