--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -112,4 +112,8 @@ nav a {
     .btn-nav{
         @apply flex h-[40px] w-[40px] items-center justify-center rounded-full border border-blue-950 bg-white;
     }
+
+    .btn-nav-alt{
+        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full bg-blue-950 border border-blue-950;
+    }
 }
