--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -109,11 +109,11 @@ nav a {
         @apply flex h-full w-full flex-col gap-8;
     }
 
-    .btn-nav{
-        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full border border-blue-950 bg-white;
+    .btn-nav {
+        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full border border-blue-950 bg-white pointer-events-auto;
     }
 
-    .btn-nav-alt{
-        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full bg-blue-950 border border-blue-950;
+    .btn-nav-alt {
+        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full bg-blue-950 border border-blue-950 pointer-events-auto;
     }
 }
