--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -49,12 +49,12 @@ nav a {
 /* custom property group for tailwind */
 @layer base {
     h1 {
-        @apply text-lg sm:text-2xl font-semibold;
+        @apply text-sm sm:text-2xl font-semibold;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.10), 0 1px 1px rgba(0, 0, 0, 0.06);
     }
 
     h2 {
-        @apply text-sm sm:text-xl font-light;
+        @apply text-xs sm:text-xl font-light;
         text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.10), 1px 1px 3px rgba(0, 0, 0, 0.06);
     }
 
@@ -94,7 +94,7 @@ nav a {
     }
 
     .container-menu {
-        @apply flex justify-center w-full
+        @apply flex justify-center w-full pr-16 sm:pr-0
     }
 
     .container-menus {
