--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -108,10 +108,10 @@ nav a {
     }
 
     .btn-nav {
-        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full border border-blue-950 bg-white pointer-events-auto;
+        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full border border-blue-950 bg-white pointer-events-auto z-10;
     }
 
     .btn-nav-alt {
-        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full bg-blue-950 border border-blue-950 pointer-events-auto;
+        @apply flex h-[40px] w-[40px] items-center justify-center rounded-full bg-blue-950 border border-blue-950 pointer-events-auto z-10;
     }
 }
