🔧 Update global CSS and component styles
- Updated the `h3` style in the global CSS to include a new font size, font weight, and text shadow.
- Updated the `Dishes` component to use an `h3` element instead of an `h2` element for the dish name.
- Added a new `ShoppingCart` component with a button and a counter for the number of items in the cart.

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -59,7 +59,8 @@ nav a {
     }
 
     h3 {
-        @apply sm:text-lg;
+        @apply text-base sm:text-xl font-light;
+        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.10), 1px 1px 3px rgba(0, 0, 0, 0.06);
     }
 
     h4 {
