🔧 Update Diet component and global styles
- Added 'use client' import to Diet.js
- Refactored Diet component to use DietButton subcomponent
- Implemented dynamic rendering of diet buttons based on selectedDiet state
- Added onClick event handler for diet button selection
- Updated global CSS styles for diet buttons

This commit improves the functionality and appearance of the Diet component by introducing a reusable subcomponent, implementing dynamic rendering of diet buttons, and updating the global CSS styles for better visual representation.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -112,4 +112,12 @@ nav a {
     .btn-nav-alt {
         @apply flex h-[40px] w-[40px] items-center justify-center rounded-full bg-blue-950 border border-blue-950 pointer-events-auto z-10;
     }
+
+    .diet-button{
+        @apply col-span-3 flex items-center justify-center rounded-lg bg-slate-100 py-4
+    }
+
+    .diet-button-selected{
+        @apply col-span-3 flex items-center justify-center rounded-lg bg-slate-800 py-4
+    }
 }
