🔧 Update DietButton component and styling
- Updated the DietButton component to remove unnecessary wrapping elements.
- Adjusted the styling of the DietButton component to make it occupy the full width and height.
- Added a new paragraph element to display the capitalized diet type below each button.

This commit improves the code structure and enhances the visual appearance of the DietButton component.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -114,10 +114,10 @@ nav a {
     }
 
     .diet-button{
-        @apply col-span-3 flex items-center justify-center rounded-lg bg-slate-100 py-4
+        @apply w-full h-full flex items-center justify-center rounded-lg bg-slate-100 py-4
     }
 
     .diet-button-selected{
-        @apply col-span-3 flex items-center justify-center rounded-lg bg-slate-800 py-4
+        @apply w-full h-full flex items-center justify-center rounded-lg bg-slate-800 py-4
     }
 }
