🔧 Update Filter component and related components
- Added a new prop `content_website_from_company` to the Filter component.
- Updated the LanguageSwitch, ButtonFilter, ShoppingCartButtonAdd, ShoppingCartButtonClear, and ShoppingCartButtonResume components to use the `content_website_from_company` prop.
- Modified CSS styles for `.btn-primary` and `.btn-alt-primary`.

This commit updates the Filter component and its related components by adding a new prop `content_website_from_company`. It also modifies the CSS styles for `.btn-primary` and `.btn-alt-primary`.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -71,11 +71,11 @@ nav a {
 
 @layer components {
 	.btn-primary {
-		@apply flex min-h-[50px] w-[235px] items-center gap-4 rounded-lg border-[1.5px] px-7 py-3.5 text-sm text-white shadow-lg sm:gap-6 sm:text-base;
+		@apply flex min-h-[50px] w-[235px] items-center gap-4 rounded-lg border-[1.5px] border-blue-950 bg-blue-950 px-7 py-3.5 text-sm text-white shadow-lg sm:gap-6 sm:text-base;
 	}
 
 	.btn-alt-primary {
-		@apply flex min-h-[50px] w-[235px] items-center gap-4 rounded-lg border-[1.5px] bg-slate-50 px-7 py-3.5 text-sm shadow-lg sm:gap-6 sm:text-base;
+		@apply flex min-h-[50px] w-[235px] items-center gap-4 rounded-lg border-[1.5px] border-blue-950 bg-slate-50 px-7 py-3.5 text-sm text-blue-950 shadow-lg sm:gap-6 sm:text-base;
 	}
 
 	.container-menu {
