--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,7 +103,7 @@ nav a {
 	}
 
 	.diet-button {
-		@apply flex h-full w-full items-center justify-center rounded-lg bg-slate-100 py-4;
+		@apply flex h-full w-full items-center justify-center rounded-lg bg-red-100 py-4;
 	}
 
 	.diet-button-selected {
